--- a/style.css
+++ b/style.css
@@ -5,19 +5,30 @@
 }
 body {
     background-color: black;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif ;
     
 }
 
 /* heading */
-
-h1 {
-    color:white;
-    text-align: center;
-    margin: 50px 0px;
+.heading{
+    display: flex;
+    padding: 25px;
+    justify-content: center;
+    align-items:center;
+    flex-wrap: wrap;
 
 }
-h1 span {
+.heading img {
+    height: 80px;
+}
+.heading h1 {
+    color:white;
+    text-align: center;
+    margin: 20px 30px 0px;
+    
+
+}
+.heading h1 span {
     color:yellow
 }
 h1 span:hover{
